--- a/movieflix/src/styles/MovieList.css
+++ b/movieflix/src/styles/MovieList.css
@@ -27,3 +27,20 @@
   font-size: 1.8rem;
 }
 
+@media (min-width: 769px) and (max-width: 1024px) {
+  .movie-year {
+    font-size: 1.4rem;
+  }
+  .movie-grid > * {
+    flex: 1 1 25%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
+  .movie-grid > * {
+    flex: 1 1 40%;
+  }
+  .movie-year {
+    font-size: 1rem;
+  }
+}
