--- a/movieflix/src/styles/GenreFilter.css
+++ b/movieflix/src/styles/GenreFilter.css
@@ -10,6 +10,10 @@
   padding: 10px; 
 }
 
+.genre-filter::-webkit-scrollbar {
+  display: none;
+}
+
 .genre-item {
   padding: 2px 12px;
   border-radius: 5px;
