--- a/movieflix/src/App.css
+++ b/movieflix/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   font-size: 16px;
+  background-image: linear-gradient(to bottom, #000000, #0f070b, #170e15, #1a141f, #1b1929, #251f3a, #30254c, #3e2a5d, #70246a, #a40363, #cf0049, #e91b1c);
 }
 
 .App-logo {
