--- a/movieflix/src/styles/MovieList.css
+++ b/movieflix/src/styles/MovieList.css
@@ -22,6 +22,7 @@
 
 .movie-year {
   display: flex;
+  color: white;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1.8rem;
