--- a/movieflix/src/styles/MovieCard.css
+++ b/movieflix/src/styles/MovieCard.css
@@ -24,6 +24,7 @@
   color: #fff;
   padding: 10px 0px;
   text-align: center;
+  transition: background-color 0.3s ease;
 }
 
 .movie-card .movie-overlay {
