--- a/movieflix/src/styles/MovieFlix.css
+++ b/movieflix/src/styles/MovieFlix.css
@@ -8,6 +8,7 @@
 .logo-container > img {
     width: 350px;
     height:50px;
+    mix-blend-mode:difference;
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
