--- a/movieflix/src/styles/NoMoviesMessage.css
+++ b/movieflix/src/styles/NoMoviesMessage.css
@@ -20,4 +20,24 @@
   .no-movies-message strong {
     font-weight: bold;
   }
+
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .no-movies-message h2 {
+      font-size: 1rem
+    }
+
+    .no-movies-message p {
+      font-size: 0.8rem
+    }
+  }
+  
+  @media (min-width: 320px) and (max-width: 768px) {
+    .no-movies-message h2 {
+      font-size: 0.9rem
+    }
+    
+    .no-movies-message p {
+      font-size: 0.6rem
+    }
+  } 
   
